code for indexing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+AOL4PS/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,python,macos,windows,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,python,macos,windows,linux,visualstudiocode
 
