--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 AOL4PS/*
+!datasets/AOL4PS/SETUP.md
+datasets/AOL4PS/*.csv
+datasets/AOL4PS/README.md
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,python,macos,windows,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,python,macos,windows,linux,visualstudiocode
@@ -139,7 +143,8 @@ replay_pid*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
