--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,python,macos,windows,linux,visualstudiocode
+connecter.py
